Fixed scrollbar issues

--- a/style.css
+++ b/style.css
@@ -30,10 +30,6 @@ h3 {
     border: 3px solid black;
 }
 
-#title {
-    overflow: scroll;
-}
-
 #play {
     position: absolute;
     text-align: center;
